Add new award and academic speech details; update CSS for event labels

--- a/css/my_style.css
+++ b/css/my_style.css
@@ -232,6 +232,12 @@
     border: 1px solid #c32b72;
 }
 
+.label-event-asp {
+    /* Academic Speech */
+    background-color: #e93a8b;
+    border: 1px solid #e93a8b;
+}
+
 .label-event-re {
     /* Recorded Event */
     background-color: #60666a;
